# luminoveau-doom

./: .gitignore  CMakeLists.txt  README.md  build_mac.sh  build_web.sh  build_win.sh  plan.md  toolchain-mingw.cmake
.github/workflows/: deploy-web.yml  release.yml
assets/shaders/: doom_bloom.frag  doom_bloom.vert  doom_overlay.frag  doom_overlay.vert  doom_sky.frag  doom_sky.vert  doom_sprite.frag  doom_sprite.vert  doom_test.frag  doom_test.vert  doom_world.frag  doom_world.vert
patches/: README.md  apply.sh  luminoveau-input-no-gamepad.patch  luminoveau-shader-transpile.patch  luminoveau-virtualcontrols-touch.patch
src/: DoomRenderPass.cpp  DoomRenderPass.h  dg_bridge.h  dg_music.c  dg_render.c  i_lumi.c  main.cpp  web_prejs.js
web/: manifest.webmanifest  shell.html  stamp_version.sh  sw.js
